# ROScue

./: .gitignore  Architecture decision summary  Architecture decision summary.md  Architecture_decision_summary.md  FOLDER_STRUCTURE.md  README.md  command.txt  driving_command_goal_gate.py  imitation_learning.md  project_overview.md  readme_team_member  rt_detr_train_code.ipynb  team_member  team_member.md  troubleshooting.txt  yolo.md  yolo10m_results.csv  yolo10m_train_code.ipynb  yolo11m_results.csv  yolo23m_train_code.ipynb  yolo26m_results.csv  생각해볼거.txt  일지.md  일지.txt
2번쨰/client/: roscue_process_manager_node.py  roscue_state_publisher_node.py
2번쨰/server/: main_control.py  omx_manual_control.py  robot_manager.py  roscue_main_server_node.py  service_client_manager.py
3번쨰/client/: TaskCommandSrv.srv  robot_process_manager_node.py  robot_status_publisher.py
3번쨰/server/: omx_control.py  roscue_main_server_node.py  yolo_inference_server.py
3번쨰/메뉴얼컨트롤/: server_omx_manual_control.py
ai/: README.md
docs/: README.md  ros_interfaces.md  runbook.md  scenario.md  setup.md
embedded/: README.md
flask/: dashboard_server.py
map/: test.pgm  test.yaml
maps/: README.md
models/: README.md
ros2_ws/: README.md
ros_pj/: 01_usb_check.py  02_serial_check.py  03_camera_info.py  04_single_camera_test.py  05_dual_camera_test.py  06_opencr_check.py  ROS2_test.py
roscue_client/: package.xml  setup.cfg  setup.py
roscue_dispatch/: CMakeLists.txt  package.xml
roscue_dispatch/bridge/: pc10_to_wf1_14_bridge.yaml  wf1_14_to_pc10_bridge.yaml  wf2_15_to_pc10_bridge.yaml
roscue_dispatch/scripts/: multi_robot_point_dispatcher.py
roscue_interface/: CMakeLists.txt  package.xml
roscue_map_gui/: web_gateway.py  web_server.py
roscue_server/: flaskServer.py  roscue_dto.py  roscue_main_server_node.py  roscue_manger_node.py
scripts/: README.md
server/roscue_interface/: CMakeLists.txt  package copy.xml
server/roscue_interface/msg/: ArmPositions.msg  MainToNavMsg.msg  RobotStatus.msg  YoloEvent.msg
server/roscue_interface/srv/: ArmPose.srv  ManualDone.srv  MissionCommand.srv  SetYoloMode.srv  TaskCommandSrv.srv
src/: video_transfer_server.py
templates/: index.html
tests/: README.md
turtlebot/src/turtlebot3/turtlebot3_navigation2/: CMakeLists.txt
turtlebot/src/turtlebot3/turtlebot3_navigation2/launch/: map_saver.launch.py  navigation2_live_clicked_point.launch.py
turtlebot/src/turtlebot3/turtlebot3_navigation2/param/: burger.yaml  burger_cam.yaml  waffle.yaml
turtlebot/src/turtlebot3/turtlebot3_navigation2/scripts/: clicked_point_to_nav_goal.py  map_auto_loader.py  saved_points_to_nav_goal.py
ty_detr_train_result/: args.yaml  results.csv
web/: README.md
yolo10m_train_result/: args.yaml  results.csv
yolo11_train_result/: args.yaml  results.csv
(+118 files in other folders)
