<?xml version="1.0"?>
<package format="3">
  <name>roscue_dispatch</name>
  <version>0.0.0</version>
  <description>ROSCUE PC-side dispatcher + domain bridges</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>domain_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>map_msgs</exec_depend>
  <exec_depend>roscue_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>